--- a/Blog_Prj/Blog_App/templates/postdetail.html
+++ b/Blog_Prj/Blog_App/templates/postdetail.html
@@ -1,7 +1,10 @@
+
+{% extends "base.html" %}
+
 {% load disqus_tags %}
 {% set_disqus_title post.title %}
 {% disqus_show_comments %}
-{% extends "base.html" %}
+
 
 {% block content %}
 
@@ -9,7 +12,9 @@
             <hr>
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="http://placehold.it/100" style="width:100px; height: 100px; background-color: #12ABB2; color: #ffffff;" class="img-circle">
+                    {% if post.image %}
+                    <img src="/media/{{ post.image}}" style="width:100px; height: 100px; background-color: #12ABB2; color: #ffffff;" class="img-circle">
+                    {% endif %}
                 </a>
             </div>
             <div class="col-md-10 col-sm-9">
@@ -18,7 +23,7 @@
                     <div class="col-xs-9">
                         <p>{{ post.content }}</p>
                         <button class="btn btn-default" onclick="location.href='/blog'">Back To Blog</button>
-                       <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }</p>
+                       <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
                     </div>
                 </div>
             </div>
