--- a/Blog_Prj/Blog_App/templates/postdetail.html
+++ b/Blog_Prj/Blog_App/templates/postdetail.html
@@ -23,6 +23,7 @@
                     <div class="col-xs-9">
                         <p>{{ post.content }}</p>
                         <button class="btn btn-default" onclick="location.href='/blog'">Back To Blog</button>
+                        <button class="btn btn-default" onclick="location.href='{% url 'edit' post.id %}'">Edit</button>
                        <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
                     </div>
                 </div>
